# local-whisper

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  build.ps1  install.ps1  installer.iss  localwhisper.spec  pyproject.toml  requirements.txt  run.py  uninstall.ps1
localwhisper/: __init__.py  app.py  assets.py  audio.py  autostart.py  config.py  diagnostics.py  focus.py  gpu.py  hotkey.py  injector.py  sounds.py  storage.py  tray.py
localwhisper/transcriber/: __init__.py  base.py  diarization.py  faster_whisper_engine.py  file_transcriber.py  language.py  parakeet_engine.py  registry.py
localwhisper/ui/: icons.py  overlay_recording.py  settings_window.py  style.qss
localwhisper/ui/pages/: configuration.py  history.py  home.py  modes.py  sound.py  transcribe_file.py  vocabulary.py
localwhisper/ui/widgets/: card.py  toggle_switch.py  waveform.py
tests/: test_assets.py  test_hotkey_parser.py  test_injector.py  test_storage.py
